# bioclin-mcp

./: .dockerignore  .env.example  .env.txt  .gitignore  AUTHENTICATION.md  AUTOMATED_AUTH_README.md  CLEANUP_PLAN.md  DOCKER_ONLY_SETUP.md  DOCKER_SESSION_FIX.md  Dockerfile  Dockerfile.cloudrun  Dockerfile.mcpx-cloudrun  FINAL_LOGIN_SOLUTION.md  FIXES-APPLIED.md  MCPX-DEPLOYMENT.md  MCPX-INTEGRATION-SUMMARY.md  MCPX-QUICKSTART.md  MCP_AUTO_LOGIN_INTEGRATION.md  QUICKSTART.md  QUICKSTART_DOCKER.md  QUICKSTART_UV.md  README.md  SETUP.md  SUCCESS.md  SUMMARY.md  TROUBLESHOOTING.md  auto_browser_auth.py  bioclin_fastmcp.py  bioclin_schemas.py  docker-compose.cloudrun-test.yml  docker-compose.yml  docker-login.sh  example_config.json  example_usage.py  pyproject.toml  quick-test.sh  requirements.txt  run-mcpx-local.sh  run_bioclin.sh  start-mcpx.sh  (+2 more)
chatbot/: README.md  bioclin_chatbot_client.py  requirements.txt
config/: claude-desktop-config.json
deploy/: README.md  deploy-cloudrun.sh  setup-gcp-secrets.sh
docs/: AUTHENTICATION.md  DOCKER.md  DOCKER_AUTH.md
mcpx-config/: .env.template  .gitignore  README.md  app-with-auth.yaml  app.yaml  auth-setup-guide.md  claude-desktop-config.json  init.sh  mcp.json  test-mcpx-local.sh
scripts/: build.sh  docker-cli-login.sh  docker-login.sh  manual-login-guide.md  run_bioclin.sh
src/: bioclin_auth.py  bioclin_fastmcp.py  bioclin_mcp.py  bioclin_mcp_server.py  bioclin_schemas.py
tests/: README.md  run-all-tests.sh  test-chatbot-client.py  test-integration.sh
