[project]
name = "bioclin-mcp"
version = "1.0.0"
description = "Model Context Protocol server for Bioclin API"
authors = [
    {name = "Bioclin Team"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=0.9.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "pydantic[email]>=2.0.0",
    "python-json-logger>=2.0.0",
]

[project.scripts]
bioclin-mcp = "bioclin_mcp_server:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["bioclin_mcp_server", "bioclin_schemas"]
